--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,15 @@
     right: 0;
     top: -100vh;
 }
+
+#content {
+    background-color: #FDF9F6;
+    border-radius: 20px;
+    padding-left: 30px;
+    margin-left: -30px;
+    padding-right: 30px;
+    margin-right: -30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border: 1px solid #E2E2E0;
+}
