--- a/styles.css
+++ b/styles.css
@@ -27,9 +27,7 @@
     background-color: #FDF9F6;
     border-radius: 20px;
     padding-left: 30px;
-    margin-left: -30px;
     padding-right: 30px;
-    margin-right: -30px;
     padding-top: 20px;
     padding-bottom: 20px;
     border: 1px solid #E2E2E0;
@@ -37,4 +35,16 @@
 
 h1.mt-8 {
     margin-top: 0;
+}
+
+#content-area {
+    max-width: 95%;
+}
+
+#content-side-layout {
+    display: none;
+}
+
+div:has(#content-area) {
+    padding-left: 0;
 }
